--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>Christy Eang: Web Developer</title>
   <base href="/">
   <script src="https://kit.fontawesome.com/71f42071b5.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.10.1/devicon.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
